--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Srishti Saha</title>
+  <title>Shrishti Saha Shetu </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -48,9 +48,9 @@
         <i class="fa fa-phone"></i> +91 8197346936
       </div>
       <div class="social-links float-right">
-        <a href="https://www.linkedin.com/in/srishti-saha-b15975b8/" class="linkedin"><i class="fa fa-linkedin"></i></a>
-		<a href="https://medium.com/@srishtisaha" class="medium"><i class="fa fa-medium"></i></a>
-		<a href="https://github.com/srishtis" class="github"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/shrishti-shetu-fau/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+<!-- 		<a href="https://medium.com/@srishtisaha" class="medium"><i class="fa fa-medium"></i></a> -->
+		<a href="https://github.com/Shetu1994" class="github"><i class="fa fa-github"></i></a>
       </div>
     </div>
   </section>
