--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <section id="topbar" class="d-none d-lg-block">
     <div class="container clearfix">
       <div class="contact-info float-left">
-        <i class="fa fa-envelope-o"></i> <a href="mailto:contact@example.com">srishti280992@yahoo.com</a>
+        <i class="fa fa-envelope-o"></i> <a href="mailto:contact@example.com">shetu.nitjsr13@gmail.com</a>
         <i class="fa fa-phone"></i> +91 8197346936
       </div>
       <div class="social-links float-right">
@@ -62,7 +62,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#body" class="scrollto">Srishti Saha</a></h1>
+        <h1><a href="#body" class="scrollto">Shrishti Saha Shetu </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
@@ -74,13 +74,13 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#sk_courses">Courses</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li class="menu-has-children"><a href="">Articles</a>
+<!--           <li class="menu-has-children"><a href="">Articles</a>
             <ul>
               <li><a href="https://www.yaabot.com/author/srishti-saha/">Yaabot (Technology)</a></li>
               <li><a href="https://blog.datahut.co/author/srishtisaha/">Datahut (Data Sciences and Analytics)</a></li>
               <li><a href="https://medium.com/@srishtisaha">Medium (Personal work)</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -93,7 +93,7 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h5>I am a graduate student in the Master in Interdisiplinary Data Science Program at Duke University. I have 4 years of industry-experience in the field of applied analytics and data sciences across industries and business functions.</h5>
+      <h5>A recent master graduate focusing on multimedia signal processing and machine learning, with adequate programming, and technical skills, seeking a full-time position to leverage organizational and research skills to support the development of new technology. Having experience from different inter-disciplinary fields and comfortable working in a multicultural environment..</h5>
       <div>
         <a href="#about" class="btn-get-started scrollto">More about Me</a>
         <a href="#projects" class="btn-projects scrollto">My Projects</a>
