--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container clearfix">
       <div class="contact-info float-left">
         <i class="fa fa-envelope-o"></i> <a href="mailto:contact@example.com">shetu.nitjsr13@gmail.com</a>
-        <i class="fa fa-phone"></i> +91 8197346936
+        <i class="fa fa-phone"></i> +49 17636661445
       </div>
       <div class="social-links float-right">
         <a href="https://www.linkedin.com/in/shrishti-shetu-fau/" class="linkedin"><i class="fa fa-linkedin"></i></a>
@@ -93,7 +93,7 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h5>A recent master graduate focusing on multimedia signal processing and machine learning, with adequate programming, and technical skills, seeking a full-time position to leverage organizational and research skills to support the development of new technology. Having experience from different inter-disciplinary fields and comfortable working in a multicultural environment..</h5>
+      <h5>A recent master graduate focusing on multimedia signal processing and machine learning, with adequate programming, and technical skills, seeking a full-time position to leverage organizational and research skills to support the development of new technology. Having experience from different inter-disciplinary fields and comfortable working in a multicultural environment.</h5>
       <div>
         <a href="#about" class="btn-get-started scrollto">More about Me</a>
         <a href="#projects" class="btn-projects scrollto">My Projects</a>
@@ -123,8 +123,8 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>A Data Science and Analytics Enthusiast</h2>
-            <h5>Undergraduate Studies: B.Tech in Electronics and Communication Engineering (Manipal Institute of Technology, class of 2015)<br><a href="https://www.portal.mu-sigma.com/msu/DecisionScientistCertificate/10295-Jun2019-54436.html">Certified Decision Scientist</a> at Mu Sigma Business Solutions Pvt. Ltd. (Bangalore, India) <br> Areas of interest entail: Machine Learning, Data Analytics, Data Sciences, Data Engineering</h5>
+            <h2>Communication and Multimedia Engineer</h2>
+            <h5>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)<br>Research Assistant at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> <br> Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
           </div>
         </div>
 
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Projects</h2>
-          <p>This section covers all the projects that I have completed in the field of data sciences and analytics. The projects belong to mainly 3 buckets: Undergrad university project, Kaggle projects and professional projects I have completed in my career as a decision scientist.</p>
+          <p>This section covers all the projects I have completed and some demos of those projects.</p>
         </div>
 
         <div class="row">
