--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 about-img">
-            <img src="img/about-img.jpg" alt="">
+            <img src="img/photo_new.png" alt="">
           </div>
 
           <div class="col-lg-6 content">
