--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Communication and Multimedia Engineer</h2>
-            <h5>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)<br>Research Assistant at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> <br> Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
+            <h2>Research Assistant at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
+            <h5>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)<br> Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
           </div>
         </div>
 
