--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Research Assistant at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
-            <h5>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)<br> Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
+            <h2>Machine learning Engineer at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
+            <h5>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)
+		    <br>Undergraduate Studies: B.Tech in Electrical and Electronics Engineering (National Institute of Technology, Jamshedpur, India, class of 2017) <br>Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
           </div>
         </div>
 
@@ -146,8 +147,8 @@
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
-              <h4 class="title"><a href="https://github.com/srishtis/Gender-classification-of-Speech-Signals-using-ANFIS">College project- Gender classification of Speech Signals</a></h4>
-              <p class="description">Features like pitch, amplitude and entropy of the speech signals were extracted to create an ANFIS (Adaptive neuro fuzzy inference system) based classification model for gender recognition of the speaker.</p>
+              <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Supression</a></h4>
+              <p class="description">In this project we present a novel deep learning method to supress any kind of noise present in a speech signal. The Deep learning model used for this project were adapted from Google Looking to listen project and the dataset and preprocessing was follwed by Microsoft DNS challenge</p>
             </div>
           </div>
 			
