--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Machine learning Engineer at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
-            <h5>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)
-		    <br>Undergraduate Studies: B.Tech in Electrical and Electronics Engineering (National Institute of Technology, Jamshedpur, India, class of 2017) <br>Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
+            <h2>Machine learning Engineer <br>at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
+            <h5><br><br>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)
+		    <br><br><br>Undergraduate Studies: B.Tech in Electrical and Electronics Engineering (National Institute of Technology, Jamshedpur, India, class of 2017) <br><br><br>Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
           </div>
         </div>
 
