--- a/index.html
+++ b/index.html
@@ -148,11 +148,21 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Supression</a></h4>
-              <p class="description">In this project we present a novel deep learning method to supress any kind of noise present in a speech signal. The Deep learning model used for this project were adapted from Google Looking to listen project and the dataset and preprocessing was follwed by Microsoft DNS challenge</p>
+              <p class="description">In this project we present a novel deep learning method to supress any kind of noises present in a speech signal. The Deep learning model used for this project were adapted from Google Looking to listen project and the model was trained with 500 hours data provided Microsoft DNS challenge. Visit the project page for more details and listen to the emhanced audio samples.</p>
+            </div>
+          </div>
+		
+	<div class="row">
+
+          <div class="col-lg-6">
+            <div class="box wow fadeInLeft">
+              <div class="icon"><i class="fa fa-automobile"></i></div>
+              <h4 class="title"><a https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch">Lanes Detection for Autonomus Driving</a></h4>
+              <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars. In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
             </div>
           </div>
 			
-		  <div class="col-lg-6">
+<!--  <div class="col-lg-6">
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-industry"></i></div>
               <h4 class="title"><a href="https://github.com/srishtis/Kaggle-Kickstarter-Project-Status-Prediction">Kaggle- Kickstarter Project performance prediction</a></h4>
@@ -166,7 +176,7 @@
               <h4 class="title"><a href="https://github.com/srishtis/Kaggle--House-Price-Prediction">Kaggle- Prediction of House Prices</a></h4>
               <p class="description">Using over 75 predictors, a regression model was created after extensive data exploration, feature engineering and data treatment. The results are currently in the top 31% of the leaderboard.</p>
             </div>
-          </div>
+          </div> -->
 			
 		  <div class="col-lg-6">
             <div class="box wow fadeInRight" data-wow-delay="0.2s">
@@ -174,8 +184,8 @@
               <h4 class="title">Machine Failure Prediction</h4>
               <p class="description">Multiple classification models were built using data from machine-performance logs and maintenance records to predict failure of an injection molding machine an hour in advance.</p>
             </div>
-          </div>	
-
+          </div>	 -->
+<!-- 
           <div class="col-lg-6">
             <div class="box wow fadeInLeft" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
@@ -190,15 +200,15 @@
               <h4 class="title">New Product recommendation for UK Retailer</h4>
               <p class="description">Based on attributes and market performance of competitor products, new products were identified to include in the client portfolio. The performance (impact of introduction) of these parts was predicted on the basis of historical performance of similar products in the clients' product portfolio.</p>
             </div>
-          </div>	
+          </div>	 -->
 			
-		  <div class="col-lg-6">
+<!-- 		  <div class="col-lg-6">
             <div class="box wow fadeInLeft" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-money"></i></div>
               <h4 class="title"><a href="https://github.com/srishtis/Identify-catastrophic-claims-from-non-catastrophic-claims">Identify claims misclassified as non-catastrophic but are related to catastrophe.</a></h4>
               <p class="description">Claim descriptions were analyzed for keywords to create features along with time-related and geographical attributes. Multiple classification models were built using these features of which the best performing model was selected on the basis of its performance and cross-validation results.</p>
             </div>
-          </div>	
+          </div>	 -->
 			
 		  <div class="col-lg-6">
             <div class="box wow fadeInRight" data-wow-delay="0.2s">
@@ -208,21 +218,13 @@
             </div>
           </div>	
 
-          <div class="col-lg-6">
+<!--           <div class="col-lg-6">
             <div class="box wow fadeInLeft" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-automobile"></i></div>
               <h4 class="title">Emerging Issue Analytics- Vehicle Recall Prediction</h4>
               <p class="description">Customer complaints from NHTSA were treated and cleaned with text processing methods: Stop Word removal, bigram treatment, stemming, word-frequency treatment, word-length treatment. These treated complaint phrases were then analyzed using STM (structural topic modelling) to derive key themes and vehicle failure patterns. Along with other data sources like warranty data and customer transaction data, a vehicle recall was predicted at least 3 years before the actual recall was initiated.</p>
             </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="box wow fadeInRight" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-automobile"></i></div>
-              <h4 class="title">Pricing Toolkit for automotive aftermarket parts</h4>
-              <p class="description">Built an RShiny dashboard for the aftermarket sector of a leading automotive giant:- Reporting Module: automated reports for spare-parts pricing anomalies; Pricing Post-Audit Module: conducted test-control analysis for identifying the revenue, margin and volume impact of recent pricing decisions; Strategic Pricing Module: several heuristic and algorithmic approaches to prescribe directional price recommendations on automotive spare-parts</p>
-            </div>
-          </div>
+          </div> -->
 			
 			
         </div>
