--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
 
-    <!--===========================================
+<!--     <!--===========================================
      Skills and Courses Section
     ===============================================-->
     <section id="sk_courses" class="wow fadeInUp">
@@ -394,7 +394,7 @@
         </div>
 
       </div>
-    </section><!-- #courses -->
+    </section><!-- #courses --> -->
 
     <!--==========================
       Testimonials Section
