--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>409, Indraprastha Colony, Sector 30/33, Faridabad-121003, Haryana, India</address>
+              <address>Wichernstrasse 18, Zi-518, Erlangen-91052, Bayern, Germany</address>
             </div>
           </div>
 
@@ -529,7 +529,7 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="+918197346936">+91 8197346936</a></p>
+              <p><a href="+4917636661445">+49 17636661445</a></p>
             </div>
           </div>
 
@@ -537,7 +537,7 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:srishti280992@yahoo.com">srishti280992@yahoo.com</a></p>
+              <p><a href="mailto:shetu.nitjsr13@gmail.com">shetu.nitjsr13@gmail.com</a></p>
             </div>
           </div>
 
@@ -583,7 +583,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; <strong>Srishti Saha</strong>
+        &copy; <strong>Shrishti Saha Shetu</strong>
       </div>
       <div class="credits">
         <!--
