--- a/index.html
+++ b/index.html
@@ -148,13 +148,25 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Supression</a></h4>
-              <p class="description">In this project we present a novel deep learning method to supress any kind of noises present in a speech signal. The Deep learning model used for this project were adapted from Google Looking to listen project and the model was trained with 500 hours data provided Microsoft DNS challenge. Visit the project page for more details and listen to the emhanced audio samples.</p>
+              <p class="description">In this project we present a novel deep learning method to supress any kind of noises present in a speech signal. The Deep learning model used for this project were adapted from Google Looking to listen project and the model was trained with 500 hours data provided Microsoft DNS challenge. Visit the project page for more details and listen to the enhanced audio samples.</p>
             </div>
           </div>
 		
+	<div class="column">
+
+        <div class="col-lg-6">
+            <div class="box wow fadeInLeft">
+              <div class="icon"><i class="fa fa-automobile"></i></div>
+              <h4 class="title"><a https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch">Lanes Detection for Autonomus Driving</a></h4>
+              <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars. In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
+            </div>
+          </div>
+				
+			
+        </div>
 	<div class="row">
 
-          <div class="col-lg-6">
+        <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-automobile"></i></div>
               <h4 class="title"><a https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch">Lanes Detection for Autonomus Driving</a></h4>
