--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
           <li class="menu-active"><a href="#body">Home</a></li>
           <li><a href="#about">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#sk_courses">Courses</a></li>
+<!--           <li><a href="#sk_courses">Courses</a></li> -->
           <li><a href="#skills">Skills</a></li>
+	  <li><a href="https://shetu1994.github.io/photography/">Photography</a></li>
 <!--           <li class="menu-has-children"><a href="">Articles</a>
             <ul>
               <li><a href="https://www.yaabot.com/author/srishti-saha/">Yaabot (Technology)</a></li>
