--- a/extent/index.html
+++ b/extent/index.html
@@ -30,9 +30,10 @@
                     </div>
                     <div class="text">
                         <h2>Abstract</h2>
-                        <p class="text-justify"> Noise is ubiquitous in almost all acoustic environments. The speech signal, that is recorded by a microphone is generally infected by noise originating from various sources. Such contamination can change the characteristics of the  speech  signals  and  degrade  the  speech  quality  and  intelligibility,  thereby causing significant harm to human-to-machine communication systems. 
-                         <br><br>However,
-                            the perception of spatial extent is crucial for visually impaired people, as it helps them to gain a sense of auditory space.<br></p>
+                        <p class="text-justify"> Noise is ubiquitous in almost all acoustic environments. The speech signal, that is recorded by a microphone is generally infected by noise originating from various sources. 
+                            Such contamination can change the characteristics of the  speech  signals  and  degrade  the  speech  quality  and  intelligibility,  thereby causing significant harm to human-to-machine communication systems. 
+                         <br><br>So to improve the quality and, if possible, also the intelligibility of a noisy speech signal, speech enhancement algorithms are employed. In this work we present a deep learning based speech enhancement algorithm
+                            which can enhance the target speech in any noisy conditions, and also can dereverb the speech signal.<br></p>
                         <figure></figure>
                         <p></p>
                     </div>
@@ -40,7 +41,7 @@
                         <div class="text-center">
                         <div class="text-center">
                             <figure class="figure"><img class="img-fluid figure-img" src="assets/img/Network-annotated_ao.jpg">
-                                <figcaption class="figure-caption">A source is perceived broader when its nearer to the listener</figcaption>
+                                <figcaption class="figure-caption">A demo model for speech enhancement</figcaption>
                             </figure>
                         </div>
                     </div>
