--- a/extent/index.html
+++ b/extent/index.html
@@ -45,13 +45,13 @@
                             </figure>
                         </div>
                     </div>
-                    <p class="text-justify">The exact methodology and technique to synthesize the perception of spatial extent is confidential as of yet, because of its commercial viability. Once the technique becomes common, this section will be updated detailing the technique
-                        that can be used for synthesizing a varying degree of spatial extent.<br><br>Below are some audio samples which are processed with a varying degree of spatial extent. <br><br>Note: Use of headphones is recommended to get the best possible listening experience.</p>
+                    <p class="text-justify">The exact methodology and technique to enhance the noisy signal is confidential as of yet, because of its commercial viability. Once the technique becomes common, this section will be updated detailing the methods and use cases
+                        that can be applied for enhancing the speech signals and .<br><br>Below are some audio samples which are enhanced by our devoloped algorithms containing many real life scenarions. <br><br>Note: Use of headphones is recommended to asses the improvement and enhancement done by our models</p>
                     <div class="text">
                         <h2>Processed demo audio samples</h2>
-                        <p>Processed samples with varying degree of spatial extent is listed here for music excerpts from three instruments namely: Guitar, Organ and Piano. The fourth excerpt is that of a choir. The excerpts are taken from EBU SQAM CD. (https://tech.ebu.ch/publications/sqamcd)
+                        <p>Processed samples containing noise from varing real life scenarions: e.g, burble in reverb condition, typewritter, ambient noise, and knock on table. 
                           <br>
-<br> Each excerpt is processed with 5 extent levels: <br>1) No extent <br>2) Small extent <br>3) Medium extent <br>4) Large extent <br>5) Very large extent
+<br> Each sample is processed with 3 different models: <br>1) Implicit-CRM-BLSTM-Linear model <br>2) Implicit-CRM-BLSTM-Tanh<br>3) Implicit-CRM-LSTM-Linear 
                         </p>
                         <h5>My Voice in Natural Condition</h5>
                         <p>
