--- a/extent/index.html
+++ b/extent/index.html
@@ -45,8 +45,8 @@
                             </figure>
                         </div>
                     </div>
-                    <p class="text-justify">The exact methodology and technique to enhance the noisy signal is confidential as of yet, because of its commercial viability. Once the technique becomes common, this section will be updated detailing the methods and use cases
-                        that can be applied for enhancing the speech signals and .<br><br>Below are some audio samples which are enhanced by our devoloped algorithms containing many real life scenarions. <br><br>Note: Use of headphones is recommended to asses the improvement and enhancement done by our models</p>
+                    <p class="text-justify">The exact methodology and technique to enhance the target speech is confidential as of yet, because of its commercial viability. Once the technique becomes common, this section will be updated detailing the methods and use cases
+                        that can be applied for enhancing the speech signals.<br><br>Below are some audio samples which are enhanced by our devoloped algorithms containing many real life scenarions. <br><br>Note: Use of headphones is recommended to asses the improvement and enhancement done by our models</p>
                     <div class="text">
                         <h2>Processed demo audio samples</h2>
                         <p>Processed samples containing noise from varing real life scenarions: e.g, burble in reverb condition, typewritter, ambient noise, and knock on table. 
