--- a/index.html
+++ b/index.html
@@ -425,12 +425,12 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2016.pdf">for showing clarity of thinking, undaunted and excellent problem-solving, responsiveness, and commitment during the emerging issue analytics POC </a>
+                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2016.pdf">Mr.Shetu impressed us with his expertise in the field of deep neural networks that was valuable to the entire team. He was a dedicated internee who has always accomplished his assignments with utmost commitment. </a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-              <h3>Alok Kumar</h3>
-              <h4>Apprentice Leader</h4>
+              <h3>Prof.Dr.Dr. Ulrich Hoppe</h3>
+              <h4>Department head, Universitätsklinikum Erlangen</h4>
             </div>
 			
 			<div class="testimonial-item">
