--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h5>A recent master graduate focusing on multimedia signal processing and machine learning, with adequate programming, and technical skills, seeking a full-time position to leverage organizational and research skills to support the development of new technology. Having experience from different inter-disciplinary fields and comfortable working in a multicultural environment.</h5>
+      <h5>A recent master graduate focusing on machine learning, audio and multimedia signal processing, with adequate programming, and technical skills,
+	      dedicated to leverage organizational, academic and research skills to support the development of new technology.</h5>
       <div>
         <a href="#about" class="btn-get-started scrollto">More about Me</a>
         <a href="#projects" class="btn-projects scrollto">My Projects</a>
@@ -124,9 +125,9 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Machine learning Engineer <br>at <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
-            <h5><br><br>Graduate Studies: Master's in Communication and Multimedia Engineering (FAU Erlangen Nuremberg, Germany, class of 2020)
-		    <br><br><br>Undergraduate Studies: B.Tech in Electrical and Electronics Engineering (National Institute of Technology, Jamshedpur, India, class of 2017) <br><br><br>Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
+            <h2>Machine learning Engineer, <br> <a href="https://www.iis.fraunhofer.de/">Fraunhofer IIS</a> </h2>
+            <h5><br><br>Graduate Studies: Master's in Communication and Multimedia Engineering (<a href="https://www.fau.eu/">FAU Erlangen Nuremberg</a>, Germany, class of 2020)
+		    <br><br><br>Undergraduate Studies: B.Tech in Electrical and Electronics Engineering (<a href="http://www.nitjsr.ac.in/">National Institute of Technology, Jamshedpur</a>, India, class of 2017) <br><br><br>Areas of interest entail: Machine Learning, Multimedia Signal Processing, Computational Neuroscience, AI for Health and Biomedical Research.</h5>
           </div>
         </div>
 
@@ -149,7 +150,9 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Supression</a></h4>
-              <p class="description">In this project we present a novel deep learning method to supress any kind of noises present in a speech signal. The Deep learning model used for this project were adapted from Google Looking to listen project and the model was trained with 500 hours data provided Microsoft DNS challenge. Visit the project page for more details and listen to the enhanced audio samples.</p>
+              <p class="description">In this project we present a novel deep learning method to suppress any kind of noises present in a speech signal. 
+		      The Deep learning model used for this project use a covulational recurrent neural network and the model was trained with 500 hours data provided by
+		      <a href="https://dns-challenge.azurewebsites.net/">Microsoft DNS challenge</a>. Visit the project page for more details and listen to the enhanced audio samples.</p>
             </div>
           </div>
 		
@@ -158,7 +161,8 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-automobile"></i></div>
               <h4 class="title"><a href=https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch>Lanes Detection for Autonomus Driving</a></h4>
-              <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars. In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
+              <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars.
+		      In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
             </div>
           </div>
 			
